# corridor_mpc

./: .gitignore  LICENSE  README.md  pyproject.toml
nodes/: run_tracking.py
scripts/: install_dependencies.py  run_tracking.py
src/corridor_mpc/: simulation_trajectory.py  util.py
src/corridor_mpc/controllers/: corridor_mpc.py
src/corridor_mpc/models/: ff_kinematics.py
